infra/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: froystein-jp-dev
  labels:
    app.kubernetes.io/name: froystein-jp
    app.kubernetes.io/instance: dev
