infra/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: froystein-jp
  labels:
    app.kubernetes.io/name: froystein-jp
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: froystein-jp
